--- a/src/app/modules/tour-dairy/tour-dairy-mco/tour-dairy-mco.component.html
+++ b/src/app/modules/tour-dairy/tour-dairy-mco/tour-dairy-mco.component.html
@@ -109,122 +109,122 @@
             </thead>
             <tbody>
             <tr>
-                <td>
+                <td class="border-r">
                     <mat-form-field class=" mat-form-field-fluid w-full"
                                     appearance="outline">
                         <input matInput>
                     </mat-form-field>
                 </td>
-                <td>
+                <td class="border-r">
                     <mat-form-field class=" mat-form-field-fluid w-full"
                                     appearance="outline">
                         <input matInput>
                     </mat-form-field>
                 </td>
-                <td>
+                <td class="border-r">
                     <mat-form-field class=" mat-form-field-fluid w-full"
                                     appearance="outline">
                         <input matInput>
                     </mat-form-field>
                 </td>
-                <td>
+                <td class="border-r">
                     <mat-form-field class=" mat-form-field-fluid w-full"
                                     appearance="outline">
                         <input matInput>
                     </mat-form-field>
                 </td>
-                <td>
+                <td class="border-r">
                     <mat-form-field class=" mat-form-field-fluid w-full"
                                     appearance="outline">
                         <input matInput>
                     </mat-form-field>
                 </td>
-                <td>
+                <td class="border-r">
                     <mat-form-field class=" mat-form-field-fluid w-full"
                                     appearance="outline">
                         <input matInput>
                     </mat-form-field>
                 </td>
-                <td>
+                <td class="border-r">
                     <mat-form-field class=" mat-form-field-fluid w-full"
                                     appearance="outline">
                         <input matInput>
                     </mat-form-field>
                 </td>
-                <td>
+                <td class="border-r">
                     <mat-form-field class=" mat-form-field-fluid w-full"
                                     appearance="outline">
                         <input matInput>
                     </mat-form-field>
                 </td>
-                <td>
+                <td class="border-r">
                     <mat-form-field class=" mat-form-field-fluid w-full"
                                     appearance="outline">
                         <input matInput>
                     </mat-form-field>
                 </td>
-                <td>
+                <td class="border-r">
                     <mat-form-field class=" mat-form-field-fluid w-full"
                                     appearance="outline">
                         <input matInput>
                     </mat-form-field>
                 </td>
-                <td>
+                <td class="border-r">
                     <mat-form-field class=" mat-form-field-fluid w-full"
                                     appearance="outline">
                         <input matInput>
                     </mat-form-field>
                 </td>
-                <td>
+                <td class="border-r">
                     <mat-form-field class=" mat-form-field-fluid w-full"
                                     appearance="outline">
                         <input matInput>
                     </mat-form-field>
                 </td>
-                <td>
+                <td class="border-r">
                     <mat-form-field class=" mat-form-field-fluid w-full"
                                     appearance="outline">
                         <input matInput>
                     </mat-form-field>
                 </td>
-                <td>
+                <td class="border-r">
                     <mat-form-field class=" mat-form-field-fluid w-full"
                                     appearance="outline">
                         <input matInput>
                     </mat-form-field>
                 </td>
-                <td>
+                <td class="border-r">
                     <mat-form-field class=" mat-form-field-fluid w-full"
                                     appearance="outline">
                         <input matInput>
                     </mat-form-field>
                 </td>
-                <td>
+                <td class="border-r">
                     <mat-form-field class=" mat-form-field-fluid w-full"
                                     appearance="outline">
                         <input matInput>
                     </mat-form-field>
                 </td>
-                <td></td>
-                <td>
+                <td class="border-r"></td>
+                <td class="border-r">
                     <mat-form-field class=" mat-form-field-fluid w-full"
                                     appearance="outline">
                         <input matInput>
                     </mat-form-field>
                 </td>
-                <td>
+                <td class="border-r">
                     <mat-form-field class=" mat-form-field-fluid w-full"
                                     appearance="outline">
                         <input matInput>
                     </mat-form-field>
                 </td>
-                <td>
+                <td class="border-r">
                     <mat-form-field class=" mat-form-field-fluid w-full"
                                     appearance="outline">
                         <input matInput>
                     </mat-form-field>
                 </td>
-                <td>
+                <td class="border-r">
                     <mat-form-field class=" mat-form-field-fluid w-full"
                                     appearance="outline">
                         <input matInput>
@@ -233,122 +233,122 @@
             </tr>
 
             <tr>
-                <td>
+                <td class="border-r">
                     <mat-form-field class=" mat-form-field-fluid w-full"
                                     appearance="outline">
                         <input matInput placeholder="Total">
                     </mat-form-field>
                 </td>
-                <td>
+                <td class="border-r">
                     <mat-form-field class=" mat-form-field-fluid w-full"
                                     appearance="outline">
                         <input matInput>
                     </mat-form-field>
                 </td>
-                <td>
+                <td class="border-r">
                     <mat-form-field class=" mat-form-field-fluid w-full"
                                     appearance="outline">
                         <input matInput>
                     </mat-form-field>
                 </td>
-                <td>
+                <td class="border-r">
                     <mat-form-field class=" mat-form-field-fluid w-full"
                                     appearance="outline">
                         <input matInput>
                     </mat-form-field>
                 </td>
-                <td>
+                <td class="border-r">
                     <mat-form-field class=" mat-form-field-fluid w-full"
                                     appearance="outline">
                         <input matInput>
                     </mat-form-field>
                 </td>
-                <td>
+                <td class="border-r">
                     <mat-form-field class=" mat-form-field-fluid w-full"
                                     appearance="outline">
                         <input matInput>
                     </mat-form-field>
                 </td>
-                <td>
+                <td class="border-r">
                     <mat-form-field class=" mat-form-field-fluid w-full"
                                     appearance="outline">
                         <input matInput>
                     </mat-form-field>
                 </td>
-                <td>
+                <td class="border-r">
                     <mat-form-field class=" mat-form-field-fluid w-full"
                                     appearance="outline">
                         <input matInput>
                     </mat-form-field>
                 </td>
-                <td>
+                <td class="border-r">
                     <mat-form-field class=" mat-form-field-fluid w-full"
                                     appearance="outline">
                         <input matInput>
                     </mat-form-field>
                 </td>
-                <td>
+                <td class="border-r">
                     <mat-form-field class=" mat-form-field-fluid w-full"
                                     appearance="outline">
                         <input matInput>
                     </mat-form-field>
                 </td>
-                <td>
+                <td class="border-r">
                     <mat-form-field class=" mat-form-field-fluid w-full"
                                     appearance="outline">
                         <input matInput>
                     </mat-form-field>
                 </td>
-                <td>
+                <td class="border-r">
                     <mat-form-field class=" mat-form-field-fluid w-full"
                                     appearance="outline">
                         <input matInput>
                     </mat-form-field>
                 </td>
-                <td>
+                <td class="border-r">
                     <mat-form-field class=" mat-form-field-fluid w-full"
                                     appearance="outline">
                         <input matInput>
                     </mat-form-field>
                 </td>
-                <td>
+                <td class="border-r">
                     <mat-form-field class=" mat-form-field-fluid w-full"
                                     appearance="outline">
                         <input matInput>
                     </mat-form-field>
                 </td>
-                <td>
+                <td class="border-r">
                     <mat-form-field class=" mat-form-field-fluid w-full"
                                     appearance="outline">
                         <input matInput>
                     </mat-form-field>
                 </td>
-                <td>
+                <td class="border-r">
                     <mat-form-field class=" mat-form-field-fluid w-full"
                                     appearance="outline">
                         <input matInput>
                     </mat-form-field>
                 </td>
-                <td></td>
-                <td>
+                <td class="border-r"></td>
+                <td class="border-r">
                     <mat-form-field class=" mat-form-field-fluid w-full"
                                     appearance="outline">
                         <input matInput>
                     </mat-form-field>
                 </td>
-                <td>
+                <td class="border-r">
                     <mat-form-field class=" mat-form-field-fluid w-full"
                                     appearance="outline">
                         <input matInput>
                     </mat-form-field>
                 </td>
-                <td>
+                <td class="border-r">
                     <mat-form-field class=" mat-form-field-fluid w-full"
                                     appearance="outline">
                         <input matInput>
                     </mat-form-field>
                 </td>
-                <td>
+                <td class="border-r">
                     <mat-form-field class=" mat-form-field-fluid w-full"
                                     appearance="outline">
                         <input matInput>
@@ -388,17 +388,17 @@
                     </thead>
                     <tbody>
                     <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <td class="border-r"></td>
+                        <td class="border-r"></td>
+                        <td class="border-r"></td>
+                        <td class="border-r"></td>
+                        <td class="border-r"></td>
+                        <td class="border-r"></td>
+                        <td class="border-r"></td>
+                        <td class="border-r"></td>
+                        <td class="border-r"></td>
+                        <td class="border-r"></td>
+                        <td class="border-r"></td>
                     </tr>
 
                     </tbody>
@@ -452,23 +452,23 @@
             </thead>
             <tbody>
             <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td class="border-r"></td>
+                <td class="border-r"></td>
+                <td class="border-r"></td>
+                <td class="border-r"></td>
+                <td class="border-r"></td>
+                <td class="border-r"></td>
+                <td class="border-r"></td>
+                <td class="border-r"></td>
+                <td class="border-r"></td>
+                <td class="border-r"></td>
+                <td class="border-r"></td>
+                <td class="border-r"></td>
+                <td class="border-r"></td>
+                <td class="border-r"></td>
+                <td class="border-r"></td>
+                <td class="border-r"></td>
+                <td class="border-r"></td>
             </tr>
             </tbody>
         </table>
