--- a/src/app/modules/tour-dairy/tour-dairy-zc/tour-dairy-zc.component.html
+++ b/src/app/modules/tour-dairy/tour-dairy-zc/tour-dairy-zc.component.html
@@ -85,61 +85,61 @@
                                     </thead>
                                     <tbody>
                                     <tr>
-                                        <td>
+                                        <td class="border-r">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
                                                             appearance="outline">
                                                 <input matInput>
                                             </mat-form-field>
                                         </td>
-                                        <td>
+                                        <td class="border-r">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
                                                             appearance="outline">
                                                 <input matInput>
                                             </mat-form-field>
                                         </td>
-                                        <td>
+                                        <td class="border-r">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
                                                             appearance="outline">
                                                 <input matInput>
                                             </mat-form-field>
                                         </td>
-                                        <td>
+                                        <td class="border-r">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
                                                             appearance="outline">
                                                 <input matInput>
                                             </mat-form-field>
                                         </td>
-                                        <td>
+                                        <td class="border-r">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
                                                             appearance="outline">
                                                 <input matInput>
                                             </mat-form-field>
                                         </td>
-                                        <td>
+                                        <td class="border-r">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
                                                             appearance="outline">
                                                 <input matInput>
                                             </mat-form-field>
                                         </td>
-                                        <td>
+                                        <td class="border-r">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
                                                             appearance="outline">
                                                 <input matInput>
                                             </mat-form-field>
                                         </td>
-                                        <td>
+                                        <td class="border-r">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
                                                             appearance="outline">
                                                 <input matInput>
                                             </mat-form-field>
                                         </td>
-                                        <td>
+                                        <td class="border-r">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
                                                             appearance="outline">
                                                 <input matInput>
                                             </mat-form-field>
                                         </td>
-                                        <td>
+                                        <td class="border-r">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
                                                             appearance="outline">
                                                 <input matInput>
@@ -177,37 +177,37 @@
                                     </thead>
                                     <tbody>
                                     <tr>
-                                        <td>
+                                        <td class="border-r">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
                                                             appearance="outline">
                                                 <input matInput>
                                             </mat-form-field>
                                         </td>
-                                        <td>
+                                        <td class="border-r">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
                                                             appearance="outline">
                                                 <input matInput>
                                             </mat-form-field>
                                         </td>
-                                        <td>
+                                        <td class="border-r">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
                                                             appearance="outline">
                                                 <input matInput>
                                             </mat-form-field>
                                         </td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
                                                             appearance="outline">
                                                 <input matInput>
                                             </mat-form-field>
                                         </td>
-                                        <td>
+                                        <td class="border-r">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
                                                             appearance="outline">
                                                 <input matInput>
@@ -238,12 +238,12 @@
                                     </thead>
                                     <tbody>
                                     <tr>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
                                     </tr>
 
                                     </tbody>
@@ -286,27 +286,27 @@
                                     </thead>
                                     <tbody>
                                     <tr>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r">
                                             <ul>
                                                 <li>Reschedulement</li>
                                                 <li>Restructring of Installments</li>
                                                 <li>RightOff/remission</li>
                                             </ul>
                                         </td>
-                                        <td></td>
+                                        <td class="border-r"></td>
                                     </tr>
                                     </tbody>
                                 </table>
@@ -330,11 +330,11 @@
                                     </thead>
                                     <tbody>
                                     <tr>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
                                     </tr>
 
                                     </tbody>
