--- a/src/app/modules/tour-dairy/tour-dairy-zm/tour-dairy-zm.component.html
+++ b/src/app/modules/tour-dairy/tour-dairy-zm/tour-dairy-zm.component.html
@@ -98,46 +98,46 @@
                                     </thead>
                                     <tbody>
                                     <tr>
-                                        <td>
+                                        <td class="border-r">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
                                                             appearance="outline">
                                                 <input matInput>
                                             </mat-form-field>
                                         </td>
-                                        <td>
+                                        <td class="border-r">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
                                                             appearance="outline">
                                                 <input matInput>
                                             </mat-form-field>
                                         </td>
-                                        <td>
+                                        <td class="border-r">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
                                                             appearance="outline">
                                                 <input matInput>
                                             </mat-form-field>
                                         </td>
-                                        <td>
+                                        <td class="border-r">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
                                                             appearance="outline">
                                                 <input matInput>
                                             </mat-form-field>
                                         </td>
-                                        <td>
+                                        <td class="border-r">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
                                                             appearance="outline">
                                                 <input matInput>
                                             </mat-form-field>
                                         </td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td rowspan="2"></td>
-                                        <td rowspan="2"></td>
-                                        <td rowspan="2"></td>
-                                        <td rowspan="2"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td rowspan="2" class="border-r"></td>
+                                        <td rowspan="2" class="border-r"></td>
+                                        <td rowspan="2" class="border-r"></td>
+                                        <td rowspan="2" class="border-r"></td>
                                     </tr>
                                     </tbody>
                                 </table>
@@ -168,40 +168,40 @@
                                     </thead>
                                     <tbody>
                                     <tr>
-                                        <td>
+                                        <td class="border-r">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
                                                             appearance="outline">
                                                 <input matInput>
                                             </mat-form-field>
                                         </td>
-                                        <td>
+                                        <td class="border-r">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
                                                             appearance="outline">
                                                 <input matInput>
                                             </mat-form-field>
                                         </td>
-                                        <td>
+                                        <td class="border-r">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
                                                             appearance="outline">
                                                 <input matInput>
                                             </mat-form-field>
                                         </td>
-                                        <td></td>
-                                        <td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r">
                                             <ul>
                                                 <li>Reschedulement</li>
                                                 <li>Restructring of Installments</li>
                                                 <li>RightOff/remission</li>
                                             </ul>
                                         </td>
-                                        <td></td>
-                                        <td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
                                                             appearance="outline">
                                                 <input matInput>
                                             </mat-form-field>
                                         </td>
-                                        <td>
+                                        <td class="border-r">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
                                                             appearance="outline">
                                                 <input matInput>
@@ -249,27 +249,27 @@
                                     </thead>
                                     <tbody>
                                     <tr>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r">
                                             <ul>
                                                 <li>Reschedulement</li>
                                                 <li>Restructring of Installments</li>
                                                 <li>RightOff/remission</li>
                                             </ul>
                                         </td>
-                                        <td></td>
+                                        <td class="border-r"></td>
                                     </tr>
                                     </tbody>
                                 </table>
