--- a/src/app/modules/tour-dairy/tour-diary-pc/tour-diary-pc.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-pc/tour-diary-pc.component.html
@@ -101,49 +101,49 @@
                                     </thead>
                                     <tbody>
                                     <tr>
-                                        <td>
+                                        <td class="border-r">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
                                                             appearance="outline">
                                                 <input matInput>
                                             </mat-form-field>
                                         </td>
-                                        <td>
+                                        <td class="border-r">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
                                                             appearance="outline">
                                                 <input matInput>
                                             </mat-form-field>
                                         </td>
-                                        <td>
+                                        <td class="border-r">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
                                                             appearance="outline">
                                                 <input matInput>
                                             </mat-form-field>
                                         </td>
-                                        <td>
+                                        <td class="border-r">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
                                                             appearance="outline">
                                                 <input matInput>
                                             </mat-form-field>
                                         </td>
-                                        <td>
+                                        <td class="border-r">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
                                                             appearance="outline">
                                                 <input matInput>
                                             </mat-form-field>
                                         </td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
                                                             appearance="outline">
                                                 <input matInput>
                                             </mat-form-field>
                                         </td>
-                                        <td>
+                                        <td class="border-r">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
                                                             appearance="outline">
                                                 <input matInput>
@@ -189,26 +189,26 @@
                                     </thead>
                                     <tbody>
                                     <tr>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
                                                             appearance="outline">
                                                 <input matInput>
                                             </mat-form-field>
                                         </td>
-                                        <td>
+                                        <td class="border-r">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
                                                             appearance="outline">
                                                 <input matInput>
