--- a/src/app/modules/tour-dairy/tour-diary-bm/tour-diary-bm.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-bm/tour-diary-bm.component.html
@@ -84,55 +84,55 @@
                                     </thead>
                                     <tbody>
                                     <tr>
-                                        <td>
+                                        <td class="border-r">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
                                                             appearance="outline">
                                                 <input matInput>
                                             </mat-form-field>
                                         </td>
-                                        <td>
+                                        <td class="border-r">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
                                                             appearance="outline">
                                                 <input matInput>
                                             </mat-form-field>
                                         </td>
-                                        <td>
+                                        <td class="border-r">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
                                                             appearance="outline">
                                                 <input matInput>
                                             </mat-form-field>
                                         </td>
-                                        <td>
+                                        <td class="border-r">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
                                                             appearance="outline">
                                                 <input matInput>
                                             </mat-form-field>
                                         </td>
-                                        <td>
+                                        <td class="border-r">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
                                                             appearance="outline">
                                                 <input matInput>
                                             </mat-form-field>
                                         </td>
-                                        <td>
+                                        <td class="border-r">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
                                                             appearance="outline">
                                                 <input matInput>
                                             </mat-form-field>
                                         </td>
-                                        <td>
+                                        <td class="border-r">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
                                                             appearance="outline">
                                                 <input matInput>
                                             </mat-form-field>
                                         </td>
-                                        <td>
+                                        <td class="border-r">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
                                                             appearance="outline">
                                                 <input matInput>
                                             </mat-form-field>
                                         </td>
-                                        <td>
+                                        <td class="border-r">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
                                                             appearance="outline">
                                                 <input matInput>
@@ -163,31 +163,31 @@
                                     </thead>
                                     <tbody>
                                     <tr>
-                                        <td>
+                                        <td class="border-r">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
                                                             appearance="outline">
                                                 <input matInput>
                                             </mat-form-field>
                                         </td>
-                                        <td>
+                                        <td class="border-r">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
                                                             appearance="outline">
                                                 <input matInput>
                                             </mat-form-field>
                                         </td>
-                                        <td>
+                                        <td class="border-r">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
                                                             appearance="outline">
                                                 <input matInput>
                                             </mat-form-field>
                                         </td>
-                                        <td>
+                                        <td class="border-r">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
                                                             appearance="outline">
                                                 <input matInput>
                                             </mat-form-field>
                                         </td>
-                                        <td>
+                                        <td class="border-r">
                                             <mat-form-field class=" mat-form-field-fluid w-full"
                                                             appearance="outline">
                                                 <input matInput>
@@ -218,12 +218,12 @@
                                     </thead>
                                     <tbody>
                                     <tr>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
                                     </tr>
 
                                     </tbody>
@@ -266,27 +266,27 @@
                                     </thead>
                                     <tbody>
                                     <tr>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r">
                                             <ul>
                                                 <li>Reschedulement</li>
                                                 <li>Restructring of Installments</li>
                                                 <li>RightOff/remission</li>
                                             </ul>
                                         </td>
-                                        <td></td>
+                                        <td class="border-r"></td>
                                     </tr>
                                     </tbody>
                                 </table>
@@ -310,11 +310,11 @@
                                     </thead>
                                     <tbody>
                                     <tr>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
+                                        <td class="border-r"></td>
                                     </tr>
 
                                     </tbody>
